# 2gpt

./: .gitignore  README.md  pyproject.toml
togpt/: __main__.py  togpt.py
